--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ keras==2.10.0
 numpy==1.24.4
 matplotlib==3.7.5
 Pillow==10.4.0
-onnx==1.17.0
+onnx==1.12.0
 onnxruntime==1.19.2
 scikit-learn==1.3.2
 h5py
-protobuf
+protobuf<3.20,>=3.9.2
 tf2onnx
